--- a/client/style/style.css
+++ b/client/style/style.css
@@ -5,10 +5,26 @@
 
 .material-icons {
   cursor: pointer;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 
-.vote-box {
+.row {
+  padding: 5px;
+  margin: 0px;
+}
+
+.col {
+  padding: 5px;
+  margin: 0px;
+}
+
+.wrapper {
+  margin: 0px;
+  padding: 0px;
+}
+
+/* .vote-box {
   display: flex;
   align-items: center;
-}
+  flex-basis: 10%;
+} */
